tests/syntax_tests/data/parsing/errors/expressions/embed.res
// Incomplete :: embed syntax in expressions
let a = ::
let b = ::sql.
let c = ::sql.one(
let d = ::sql.one("x"

